--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,21 @@
 /* Add CSS Styling */
+
+.odd {
+    background-color: rgb(214, 79, 79);
+    font-family: "Verdana", "DejaVu Sans", sans-serif;
+}
+
+#second {
+    color: rgb(46, 46, 253);
+    font-size: 36px;
+}
+
+.odd.cooler {
+    font-size: 24px;
+}
+
+#fourth {
+    background-color: rgb(42, 253, 42);
+    font-size: 24px;
+    font-weight: bold;
+}
